--- a/main_users_db/docker/docker-compose.yml
+++ b/main_users_db/docker/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - "6380:6379"
     volumes:
-      - ./redisdata:/data
+      - ../redisdata:/data
     deploy:
       resources:
         limits:
