--- a/main_users_db/pyproject.toml
+++ b/main_users_db/pyproject.toml
@@ -39,6 +39,9 @@ python-dotenv = "^1.0.1"
 pyjwt = "^2.10.1"
 httpx = "^0.28.1"
 alembic-postgresql-enum = "^1.4.0"
+gunicorn = "^23.0.0"
+pika = "^1.3.2"
+celery = "^5.4.0"
 
 
 [build-system]
